--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,18 @@
 apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'groovy'
+apply plugin: 'application'
 
 def defaultEncoding = 'UTF-8'
 def jdkVersion = '1.8'
 
 archivesBaseName = 'it-events'
+
+mainClassName = 'tsukurukai.it_events.ItEventsApplication'
+
+project.ext {
+    dropWizardConfig = './conf/it-events.yml'
+}
 
 repositories {
     mavenCentral()
@@ -45,7 +52,11 @@ jar {
     }
 }
 
+run {
+    args 'server', dropWizardConfig
+}
+
 task stage(dependsOn: 'build') {
-  mustRunAfter 'clean'
+    mustRunAfter 'clean'
 }
 
